# webcat

./: .gitignore  .gitmodules  .prettierignore  Cargo.toml  LICENSE  README.md  cspell.json
tux/: Cargo.toml
tux/src/: data.rs  dir.rs  exe.rs  lib.rs  main.rs  server.rs  temp.rs
tux/src/test_bin/: README.md  run_with_error.rs  simple.rs  testdata.rs
tux/tests/: data_tests.rs  exe_tests.rs
tux/tests/testdata/failed/: wrong.valid
tux/tests/testdata/reverse/: list.check  single.input
webcat/: Cargo.toml
webcat/src/: main.rs
webcat/tests/: command_test.rs  common.rs  request_test.rs
webcat_script/: Cargo.toml
webcat_script/src/: lib.rs
webcat_web/: Cargo.toml
webcat_web/src/: lib.rs  request.rs  response.rs
