[package]
name = "tux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
path-clean = { version = "0.1" }
tempfile = { version = "3" }
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3"}

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
