[package]
name = "tux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/test_bin/simple.rs"
name = "tux_test_simple"
test = false

[[bin]]
path = "src/test_bin/testdata.rs"
name = "tux_test_testdata"
test = false


[dependencies]
path-clean = { version = "0.1" }
tempfile = { version = "3" }
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3"}

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
